# MSTG

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: bruteforce.h  hnswalg.h  hnswlib.h  memory.hpp  mstg_final.h  space_l2.h  utils.h
tests/: CMakeLists.txt  build_intersection.cpp  build_range.cpp  search_intersection.cpp  search_range.cpp
utils/: CMakeLists.txt  bin_to_fvecs.cpp  fvecs_to_bin.cpp  gen_base_range.py  gen_base_rfann.py  gen_base_rrann.py  gen_query.cpp  gen_query_range.cpp  utils.py
